@@ -244,19 +244,21 @@ if (d_ao_check_for_ai in [0, 1]) then {
 };
 
 d_mt_fires = [];
-private _hcount = 0;
-for "_i" from 1 to selectRandom [4,5,6,7] do {
-	if (_wp_array isEqualTo []) exitWith {};
-	private _ran = (count _wp_array) call d_fnc_RandomFloor;
-	private _pos = _wp_array # _ran;
-	while {isOnRoad _pos} do {
-		_ran = (count _wp_array) call d_fnc_RandomFloor;
-		_pos = _wp_array # _ran;
-		_hcount = _hcount + 1;
-		if (_hcount > 20) exitWith {};
+if (d_ao_bfires == 0) then {
+	private _hcount = 0;
+	for "_i" from 1 to selectRandom [4,5,6,7] do {
+		if (_wp_array isEqualTo []) exitWith {};
+		private _ran = (count _wp_array) call d_fnc_RandomFloor;
+		private _pos = _wp_array # _ran;
+		while {isOnRoad _pos} do {
+			_ran = (count _wp_array) call d_fnc_RandomFloor;
+			_pos = _wp_array # _ran;
+			_hcount = _hcount + 1;
+			if (_hcount > 20) exitWith {};
+		};
+		d_mt_fires pushBack (createVehicle ["test_EmptyObjectForFireBig", _pos, [], 0, "NONE"]);
+		_wp_array deleteAt _ran;
 	};
-	d_mt_fires pushBack (createVehicle ["test_EmptyObjectForFireBig", _pos, [], 0, "NONE"]);
-	_wp_array deleteAt _ran;
 };
 sleep 0.1;
 
