@@ -30,3 +30,4 @@ STR_DOM_MISSIONSTRING_2057
 STR_DOM_MISSIONSTRING_2058
 STR_DOM_MISSIONSTRING_2059
 STR_DOM_MISSIONSTRING_2060
+STR_DOM_MISSIONSTRING_2061
